force-app/main/default/objects/Retail_Instant_Lending__c/Retail_Instant_Lending__c.object-meta.xml
<CustomObject>
    <label>Retail Instant Lending</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Retail Instant Lending Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Instant Lendings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>