force-app/main/default/objects/Retail_Instant_Lending__c/fields/Cash_2_go_limit__c.field-meta.xml
<CustomField>
    <fullName>Cash_2_go_limit__c</fullName>
    <label>Cash 2 go limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>