force-app/main/default/objects/Retail_Instant_Lending__c/fields/Credit_Card_limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_limit__c</fullName>
    <label>Credit Card limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>