force-app/main/default/objects/Retail_Instant_Lending__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Instant Lendings</relationshipLabel>
    <relationshipName>Retail_Instant_Lendings</relationshipName>
    <type>Lookup</type>
</CustomField>