force-app/main/default/objects/Retail_Instant_Lending__c/fields/Flash_Card_flag__c.field-meta.xml
<CustomField>
    <fullName>Flash_Card_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flash Card flag</label>
    <type>Checkbox</type>
</CustomField>