force-app/main/default/objects/Retail_Instant_Lending__c/fields/Flash_Card_limit__c.field-meta.xml
<CustomField>
    <fullName>Flash_Card_limit__c</fullName>
    <label>Flash Card limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>