force-app/main/default/objects/Retail_Instant_Lending__c/fields/Instant_lending_detail__c.field-meta.xml
<CustomField>
    <fullName>Instant_lending_detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instant lending detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>